--- a/features/movies/src/main/res/layout/fragment_movies.xml
+++ b/features/movies/src/main/res/layout/fragment_movies.xml
@@ -21,9 +21,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:theme="@style/ToolbarTheme"
-            app:titleTextColor="@color/colorGrey2"
+            app:titleTextColor="@color/colorGrey"
             app:title="@string/filimo"
-            app:subtitleTextAppearance="@color/colorGrey2"
+            app:subtitleTextAppearance="@color/colorGrey"
             >
 
             <androidx.appcompat.widget.SearchView
@@ -69,6 +69,36 @@
                 android:textSize="18sp" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/movies_shimmer"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="1dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/app_toolbar"
+            app:shimmer_auto_start="true"
+            app:shimmer_duration="1000">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorGrey"
+                android:orientation="vertical">
+
+                <include layout="@layout/shimmer_movie_layout" />
+
+                <include layout="@layout/shimmer_movie_layout" />
+
+                <include layout="@layout/shimmer_movie_layout" />
+
+                <include layout="@layout/shimmer_movie_layout" />
+
+            </LinearLayout>
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
         <com.airbnb.epoxy.EpoxyRecyclerView
             android:id="@+id/recyclerView"
@@ -80,7 +110,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/app_toolbar"
-            tools:listitem="@layout/view_holder_movie" />
+            tools:listitem="@layout/movie_view_holder" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
